test/banana/typeck/should_fail/comp_var_cant_be_shadowed.banana
c = IptablesIngestor()
c = 23
# RAISE BananaShadowingComponentError